--- a/sites/all/themes/cg33/css/cg33-alpha-default-narrow.css
+++ b/sites/all/themes/cg33/css/cg33-alpha-default-narrow.css
@@ -165,3 +165,9 @@ ul.animation li{width:73px;height:84px;}
 
 .field-name-field-texte-avant-bouton {font-size:19px;width:auto;clear:both;}
 #region-user-first a {margin-left: 23%;}
+
+
+/*DATAVIZ*/
+.page-datavizs  .view-datavizs .views-row{margin:1.375em;height:368px;width:306px;float:left;}
+.page-datavizs .view-datavizs .views-row .views-field.views-field-body{height:368px;width:306px;bottom:-368px;}
+.page-datavizs .view-datavizs .views-row .views-field.views-field-title-1{width:278px;}
