--- a/sites/all/themes/cg33/css/cg33-alpha-default-narrow.css
+++ b/sites/all/themes/cg33/css/cg33-alpha-default-narrow.css
@@ -174,3 +174,4 @@ ul.animation li{width:73px;height:84px;}
 .page-datavizs  .view-datavizs .views-row.views-row-even{margin-left:2.7em;}
 .page-datavizs .view-datavizs .views-row .views-field.views-field-nid{height:368px;width:306px;bottom:-368px;}
 .page-datavizs .view-datavizs .views-row .views-field.views-field-title-1{width:278px;}
+.page-datavizs .view-datavizs .views-field.views-field-nid .field-content{top:5%;}
