--- a/sites/all/themes/cg33/css/cg33-alpha-default-normal.css
+++ b/sites/all/themes/cg33/css/cg33-alpha-default-normal.css
@@ -163,3 +163,4 @@ ul.animation li a {
 
 .page-datavizs .view-datavizs .views-row .views-field.views-field-nid{height:313px;width:260px;bottom:-313px;}
 .page-datavizs .view-datavizs .views-row .views-field.views-field-title-1{width:232px;}
+.page-datavizs .view-datavizs .views-field.views-field-nid .field-content{top:12%;}
